--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <input type="text" id="initials" maxlength="3">
             <button id="save-score-btn">Save Score</button>
         </div>
+        <div id="timer-container">
+            <p id="timer">Time: <span id="time-left">60</span> seconds</p>
+        </div>
     </div>
     <script src="Assets/script.js"></script>
 </body>
